Changes in Shorewall 4.4.17 Beta 1

1)  Handle line containing only INCLUDE.

2)  Fix empty SHELL variable handling with bash.

Changes in Shorewall 4.4.17 Beta 1

1)  Improve readability of logging logic in expand_rule().

2)  Improve efficency of oddball targets in process_rule1().

3)  Export (param,value) pairs with EXPORTPARAMS=No.

4)  Only produce 'done.' progress message on success.

5)  Support INCLUDE in user exits.

6)  Use updaterc.d during uninstall on Debian.

Changes in Shorewall 4.4.16 RC 1

1) Fix logging for jump to nat chain.

Changes in Shorewall 4.4.16 Beta 8

1)  Complete parameterized actions.

2)  Fix issue in expand_rule().

3)  Eliminate Actions module.

4)  Eliminate process_actions3().

5)  Validate BLACKLIST_DISPOSITION.

Changes in Shorewall 4.4.16 Beta 7

1)  Parameterized actions.

Changes in Shorewall 4.4.16 Beta 6

1)  Don't let root match wildcard.

2)  Fix use of wildcard names in the notrack file.

3)  Fix use of wildcard names in the proxyarp file

4)  Prevent perl runtime warnings with cached interface entries.

Changes in Shorewall 4.4.16 Beta 5

1)  Fix broken logical naming with Proxy ARP.

2)  Add support for proxyndp.

3)  Move mid-level rule processing to the Actions module.

4)  Implement format-2 actions.

5)  Allow DNAT and REDIRECT in actions.

6)  Remove kludgy restrictions regarding Macros and Actions.

Changes in Shorewall 4.4.16 Beta 4

1)  Only issue get_params() warnings under 'trace'

2)  Add ppp support to Shorewall-init

Changes in Shorewall 4.4.16 Beta 3

1)  Integrate bug catcher into 'trace' and correct handling of
    getparams on old (RHEL 5) shells.

Changes in Shorewall 4.4.16 Beta 2

1)  Install bug catcher.

Changes in Shorewall 4.4.16 Beta 1

1)  Handle multi-line ENV values

2)  Fix for absent params file.

Changes in Shorewall 4.4.15

1)  Add macros from Tuomo Soini.

2)  Corrected macro.JAP.

3)  Added fatal_error() functions to the -lite CLIs.

RC 1

1)  Another Perl 5.12 warning.
