@@ -28,6 +28,11 @@ Beta 2
     variable was referenced in a config file on a system where /bin/sh
     is the Bourne Again Shell (bash).
 
+4)  In earlier versions. if OPTIMIZE=8 then the ruleset displayed by
+    'check -r' was the same as when OPTIMIZE=0
+    (unoptimized). Similarly, if OPTIMIZE=9 then the ruleset displayed
+    was the same as when OPTIMIZE=1. 
+
 Beta 1
 
 1)  Previously, a 'done.' message could be printed at the end of
