@@ -4,6 +4,8 @@ Changes in Shorewall 4.4.17 Beta 1
 
 2)  Fix empty SHELL variable handling with bash.
 
+3)  Correct 'check -r' with OPTIMIZE=8
+
 Changes in Shorewall 4.4.17 Beta 1
 
 1)  Improve readability of logging logic in expand_rule().
